--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-python-telegram-bot==20.7
-requests==2.31.0
-Flask==2.2.2
-gunicorn==20.1.0
-aiohttp==3.8.2
-ipinfo==4.3.1
+python-telegram-bot
+requests
+ipinfo
+aiohttp
